Added plots with different l and m

--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -179,7 +179,7 @@
 % \input{modelling/modelling.tex}
 \input{system_id/system_id.tex}
 
-\input{system_id/plots/MAE_vs_Ts.tex}
+% \input{system_id/plots/MAE_vs_Ts.tex}
 % \input{system_id/plots/MAE_diff.tex}
 % \input{system_id/plots/MAE_vs_q.tex}
 % \input{system_id/plots/MAE_vs_train_Simulink_angular_rate.tex}
@@ -187,7 +187,7 @@
 % \input{system_id/plots/havok_vs_dmd_noise.tex}
 % \input{system_id/plots/singular_values.tex}
 
-% \input{system_id/system_id.tex}
+
 % \input{conclusion/conclusion.tex}
 
 % Bibliography
