--- a/system_id/plots/MAE_vs_q_double_pend.tex
+++ b/system_id/plots/MAE_vs_q_double_pend.tex
@@ -6,8 +6,8 @@
             ylabel = MAE,
             % x unit = \si{\second},
             % y unit = \si{\second},
-            xmin = 0,     xmax = 40,
-            ymin = 0.09,  ymax = 0.15,
+            xmin = 6,     xmax = 40,
+            ymin = 0.04,  ymax = 0.15,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -25,14 +25,14 @@
             }
         ]
 
-        \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = q, y = MAE_mean, col sep = comma] 
-        {system_id/csv/MAE_vs_q_SITL_x_vel_noise_longer_times_q.csv_dmd_angle_Ttrain_60.csv};
-        \addlegendentry{DMD}
+        % \addplot+[mark = none, style = solid, ultra thick] 
+        % table[x = q, y = MAE_mean, col sep = comma] 
+        % {system_id/csv/MAE_vs_q_SITL_x_vel_noise_longer_times_q.csv_dmd_angle_Ttrain_60.csv};
+        % \addlegendentry{DMD}
         
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = q, y = MAE_mean, col sep = comma] 
-        {system_id/csv/MAE_vs_q_SITL_x_vel_noise_longer_times_q.csv_havok_angle_Ttrain_60.csv};
+        {system_id/csv/MAE_vs_q_SITL_x_vel_noise_m1_0.2_l1_m2_0.1_l2_0.3.csv_havok_angle.csv};
         \addlegendentry{HAVOK}
 
         \end{axis}
