Added a bit more writing

--- a/system_id/dmdc.tex
+++ b/system_id/dmdc.tex
@@ -1,4 +1,4 @@
-\section{Dynamic Mode Decomposition with control}
+\section{Dynamic mode decomposition with control}
 \label{sec:dmdc}
     
     \paragraph{Intro}        
