--- a/system_id/havok.tex
+++ b/system_id/havok.tex
@@ -1,4 +1,4 @@
-\section{Hankel Alternative View Of Koopman} 
+\section{Hankel alternative view of Koopman} 
 \label{sec:havok}
     
     \murray{q = number of delays, from here up}
