--- a/system_id/plots/MAE_vs_Ntrain_vs_L_havok.tex
+++ b/system_id/plots/MAE_vs_Ntrain_vs_L_havok.tex
@@ -43,7 +43,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{HAVOK prediction error using different cable lengths with a range of different sample times of noisy training data
+    \caption{HAVOK prediction error using different cable lengths with different lengths of noisy training data
     ($m =$~\SI{0.2}{\kilo\gram}, $T_{train} =$~various??.)}
     \label{fig:MAE_vs_Ntrain_vs_L_havok}
 \end{figure}
