--- a/system_id/plots/MAE_vs_Ntrain_vs_m_havok.tex
+++ b/system_id/plots/MAE_vs_Ntrain_vs_m_havok.tex
@@ -15,7 +15,7 @@
             legend style = {font = \scriptsize},
             label style = {font = \scriptsize},
             tick label style = {font = \scriptsize},
-            width = 0.95\columnwidth,
+            width = 0.45\columnwidth,
             height = 0.5\columnwidth,
             % initialize Dark2
             cycle list/Dark2,
@@ -43,7 +43,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{DMD prediction error using different cable lengths with a range of different sample times of noisy training data
+    \caption{HAVOK prediction error using different payload masses with different lengths of noisy training data
     ($l =$~\SI{1}{\metre}, $T_{train} =$~various??.)}
     \label{fig:MAE_vs_Ntrain_vs_m_havok}
 \end{figure}
