--- a/system_id/plots/FFT_amplitude_single_pend.tex
+++ b/system_id/plots/FFT_amplitude_single_pend.tex
@@ -6,7 +6,7 @@
             ylabel = Amplitude,
             x unit = \si{\hertz},
             % y unit = \si{\second},
-            xmin = 0.3,     xmax = 1.4,
+            xmin = 0.3,     xmax = 1,
             ymin = 0,  ymax = 0.0075,
             grid = major,
             legend cell align = left,
@@ -27,12 +27,12 @@
 
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = f, y = P1, col sep = comma] 
-        {system_id/csv/FFT_SITL_single_pos_step_m1_0.2_l1_m2_0.1_l2_0.3.csv.csv};
+        {system_id/csv/FFT_SITL_single_pos_step_m0.3_l1.csv.csv};
 
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{ The single-sided amplitude spectrum of the FFT of the payload swing angle
-    ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{1}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.3}{\meter}).}
+    \caption{ The single-sided amplitude spectrum of the FFT of the single pendulum swing angle
+    ($m =$~\SI{0.3}{\kilo\gram}, $l =$~\SI{1}{\meter}).}
     % \label{fig:havok_vs_dmd_noise}
 \end{figure}
