--- a/system_id/plots/prediction_single_pend_white.tex
+++ b/system_id/plots/prediction_single_pend_white.tex
@@ -6,7 +6,7 @@
             ylabel = Payload angle,
             x unit = \si{\second},
             y unit = \si{\radian},
-            xmin = 2,   xmax = 30,
+            xmin = 0,   xmax = 20,
             ymin = -0.2,  ymax = 0.2,
             grid = major,
             legend cell align = left,
@@ -27,28 +27,28 @@
         
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = time, y = theta, col sep = comma] 
-        {system_id/csv/single_step_predictions_SITL_single_pos_step_m1_0.2_l1_m2_0.1_l2_0.3.csv.csv};
+        {system_id/csv/single_step_predictions_SITL_x_vel_noise_l1_m0-3.csv.csv};
         \addlegendentry{Actual}
 
         % \addplot+[mark = none, style = dashed, ultra thick] 
         % table[x = time, y = theta_dmd, col sep = comma] 
-        % {system_id/csv/single_step_predictions_SITL_single_pos_step_m1_0.2_l1_m2_0.1_l2_0.3.csv.csv};
+        % {system_id/csv/single_step_predictions_SITL_x_vel_noise_l1_m0-3.csv.csv};
         % \addlegendentry{DMD}
 
         % \addplot+[mark = none, style = dashed, ultra thick] 
         % table[x = time, y = theta_havok, col sep = comma] 
-        % {system_id/csv/single_step_predictions_SITL_single_pos_step_m1_0.2_l1_m2_0.1_l2_0.3.csv.csv};
+        % {system_id/csv/single_step_predictions_SITL_x_vel_noise_l1_m0-3.csv.csv};
         % \addlegendentry{HAVOK}
 
         \addplot+[mark = none, style = dashed, ultra thick] 
         table[x = time, y = theta_white, col sep = comma] 
-        {system_id/csv/single_step_predictions_SITL_single_pos_step_m1_0.2_l1_m2_0.1_l2_0.3.csv.csv};
+        {system_id/csv/single_step_predictions_SITL_x_vel_noise_l1_m0-3.csv.csv};
         \addlegendentry{White-box}
 
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{HAVOK prediction error using different cable lengths with a range of different lengths of noisy training data
+    \caption{White-box model predictions of a single pendulum for a North velocity step input
     ($l =$~\SI{1}{\metre}, $T_{train} =$~various??.)}
     \label{fig:double_pend_predictions_white}
 \end{figure}
