Added plot with SITL data of theta vs dtheta correct MAE metric

--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -9,7 +9,7 @@ The model is first derived as a 2D model.
 The system identification and control system techniques in later chapters will then be explained based on the 2D model to avoid unnecessary complexity.
 Finally, it will be described how this model and the techniques in later chapters are extended to the 3D case.
 This 3D mathematical model will be used in a nonlinear simulation of a quadrotor and suspended payload.
-
+1
 \section{Coordinate frames}
 \section{States}
 \section{Forces and moments}
@@ -20,4 +20,5 @@ This 3D mathematical model will be used in a nonlinear simulation of a quadrotor
 \section{Discretised model}
 \section{Model verification}
 \section{Dynamic payloads}
+water looks like double payload
 
