Added plot of training data

--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -175,8 +175,8 @@
 \pagenumbering{arabic}
 
 % Contents
-% \input{introduction/introduction.tex}
-% \input{modelling/modelling.tex}
+\input{introduction/introduction.tex}
+\input{modelling/modelling.tex}
 \input{system_id/system_id.tex}
 
 % \input{system_id/plots/MAE_vs_Ts.tex}
