--- a/appendices/appendices.tex
+++ b/appendices/appendices.tex
@@ -1,11 +1,11 @@
+\chapter{PID gains}
+\makeatletter\@mkboth{}{Appendix}\makeatother
+\label{appen:pid_gains}
+
+This is an appendix about PID gains used for Honeybee.
+
 \chapter{Project Planning Schedule}
 \makeatletter\@mkboth{}{Appendix}\makeatother
 \label{appen:derivations_bigramseg}
 
 This is an appendix.
-
-\chapter{Outcomes Compliance}
-\makeatletter\@mkboth{}{Appendix}\makeatother
-\label{appen:derivations_bigramseg}
-
-This is another appendix.
